--- a/templates/operation.tmpl
+++ b/templates/operation.tmpl
@@ -4,19 +4,34 @@ import "net/http"
 
 var _ = http.MethodGet
 
-{{range .Handlers}}
+{{range .Handlers -}}
 type {{.Name}} interface {
-    {{if .Body}}
-    Handle(params {{.Params}}, body {{.Body}}) Responder
-    {{else}}
-    Handle(params {{.Params}}) Responder
-    {{end}}
+  {{if .Body -}}
+    {{if .Body.IsSlice -}}
+      {{if .Body.IsDefinedElsewhere -}}
+  Handle(params {{.Params}}, body {{.Body.GoType}}) Responder
+      {{- else -}}
+  Handle(params {{.Params}}, body []{{.Body.Items.GoType}}) Responder
+      {{- end -}}
+    {{- else -}}
+  Handle(params {{.Params}}, body {{.Body.GoType}}) Responder
+    {{- end -}}
+  {{- else -}}
+  Handle(params {{.Params}}) Responder
+  {{- end}}
 }
 {{end}}
 
-{{range .Models}}
-type {{.Name}} struct {
-    {{range $k, $v := .Properties}}
-    {{$k}} {{$v}} {{end}}
-}
-{{end}}
+{{range .Models -}}
+  {{- if not .IsDefinedElsewhere -}}
+    {{- if .IsPrimitive -}}
+type {{template "schema.tmpl" .}}
+    {{- else if .IsObject -}}
+{{template "schema.tmpl" .}}
+    {{- else if .IsSlice -}}
+      {{if not .Items.IsDefinedElsewhere -}}
+{{template "schema.tmpl" .Items}}
+      {{- end}}
+    {{- end}}
+  {{- end}}
+{{- end}}
