fix: struct fields should be accessible

--- a/templates/schema.tmpl
+++ b/templates/schema.tmpl
@@ -4,9 +4,9 @@
 struct {
   {{- range .Properties}}
   {{if .IsDefinedElsewhere -}}
-  {{.ReceiverName}} {{.ReferenceType}}
+  {{pascal .ReceiverName}} {{.ReferenceType}}
   {{- else -}}
-  {{.ReceiverName}} {{template "schema.tmpl" .}}
+  {{pascal .ReceiverName}} {{template "schema.tmpl" .}}
   {{- end -}}
   {{- end -}}
 }
